Fix button alignment, add cancel buttons where necessary.

--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -1,1 +1,102 @@
-/* Empty. Add your own CSS if you like */
+/* Round button */
+button.button-icon.round-overlay-button {
+  position: absolute;
+  height: $floating-button-size;
+  width: $floating-button-size;
+  border-radius: 50%;
+  min-height: $floating-button-size;
+  padding: 0;
+  border: none;
+
+  background-color: $energized;
+  color: white;
+
+  box-shadow: $material-shadow;
+  transition: all linear 220ms;
+  transform: translate3d(0,0,0);
+  backface-visibility: hidden;
+
+  &.energized {
+    background-color: $energized;
+    color: white;
+
+    &.activated {
+      background-color: darken($energized, 15%);
+    }
+  }
+
+  &.assertive {
+    background-color: $assertive;
+    color: white;
+
+    &.activated {
+      background-color: darken($assertive, 15%);
+    }
+  }
+
+  &.positive {
+    background-color: $positive;
+    color: white;
+
+    &.activated {
+      background-color: darken($positive, 15%);
+    }
+  }
+
+  &.stable {
+    background-color: $disabledText;
+    color: $disabledText;
+
+    &.activated {
+      background-color: darken($disabledText, 15%);
+    }
+  }
+
+  &.icon {
+    &:before {
+      font-size: 24px;
+    }
+  }
+
+  &.small {
+    height: $floating-button-small-size;
+    width: $floating-button-small-size;
+    min-height: 40px;
+    padding: 0;
+    border: none;
+
+    &.icon {
+      &:before {
+        line-height: 40px;
+      }
+    }
+  }
+
+  &.activated {
+    opacity: 1;
+    box-shadow: $material-shadow-pressed;
+  }
+
+  &.left {
+    left: 1px;
+    top: 16px;
+  }
+
+  &.bottom-edge-right {
+    bottom: -24px;
+    right: 16px;
+    z-index: 12;
+  }
+
+  &.bottom-right {
+    bottom: 0;
+    margin-bottom: 16px;
+    right: 16px;
+    z-index: 2;
+
+    &.slide-down {
+      transform: translate3d(0,88px,0);
+    }
+
+  }
+}
